2012-09-22  Daniel Richard. G <danielg at teragram dot com>

	* GNUmakefile: Reordered the command lines in the "help" target
	to match the ordering of the targets in the makefile, which IMO
	is nicer to the eye; tweaked some of the parentheticals for better
	clarity; delete *.manifest files, in case the user just finished
	doing an MSVC build.
	* Makefile: Use *.static_stamp for the static targets instead of
	*.static; added a note re VC++6 and /EHs vs. /EHa; reordered the
	targets, and added a number of new ones (e.g. VSE-small-static);
	added a note recommending *-inlined and *-small-static to make
	things a little easier for users bewildered by the large number of
	targets; reworked the all-tests[-cflags] targets so that (1) more
	useful targets are built first (the small-static targets make it
	easier to track down compilation errors), (2) *-debug build and
	test targets can be used, (3) less-useful build/test permutations
	are enabled only if EXHAUSTIVE and/or MORE_EXHAUSTIVE is defined,
	and (4) /MDd and /MTd are covered too; "nmake all-tests-cflags
	EXHAUSTIVE=1 MORE_EXHAUSTIVE=1" takes a few hours to run; moved
	some of the VCE targets up, since the pattern in the file was
	already to list VCE targets first, then VSE, then VC; actually
	touch the stamp file in the stamp targets.
	* README.NONPORTABLE: It's "DllMain", not "dllMain".
	* common.mk: Start of an attempt to define dependencies for
	pthread.$(OBJEXT).
	* implement.h: Generalized PTW32_BROKEN_ERRNO into
	PTW32_USES_SEPARATE_CRT; don't do the autostatic-anchoring thing
	if we're not building the library!
	* pthread.h: Moved the PTW32_CDECL bit into sched.h. pthread.h
	already #includes sched.h, so the latter is a good place to put
	definitions that need to be shared in common; severely simplified
	the errno declaration for Open Watcom, made it applicable only to
	Open Watcom, and made the comment less ambiguous; updated the long
	comment describing PTW32_BROK^WPTW32_USES_SEPARATE_CRT; added