@@ -98,17 +98,17 @@ TEST_ENV = CFLAGS="$(CFLAGS) /DNO_ERROR_DIALOGS"
 
 all-tests:
 	$(MAKE) /E realclean VC-small-static$(XDBG)
-	cd tests && $(MAKE) /E clean VC-static$(XDBG) $(TEST_ENV) && $(MAKE) /E clean VCX-static$(XDBG) $(TEST_ENV)
+	cd tests && $(MAKE) /E clean VC-small-static$(XDBG) $(TEST_ENV) && $(MAKE) /E clean VCX-small-static$(XDBG) $(TEST_ENV)
 	$(MAKE) /E realclean VCE-small-static$(XDBG)
-	cd tests && $(MAKE) /E clean VCE-static$(XDBG) $(TEST_ENV)
+	cd tests && $(MAKE) /E clean VCE-small-static$(XDBG) $(TEST_ENV)
 	$(MAKE) /E realclean VSE-small-static$(XDBG)
-	cd tests && $(MAKE) /E clean VSE-static$(XDBG) $(TEST_ENV)
+	cd tests && $(MAKE) /E clean VSE-small-static$(XDBG) $(TEST_ENV)
 	$(MAKE) /E realclean VC-inlined$(XDBG)
-	cd tests && $(MAKE) /E clean VC$(XDBG) $(TEST_ENV) && $(MAKE) /E clean VCX$(XDBG) $(TEST_ENV)
+	cd tests && $(MAKE) /E clean VC-inlined$(XDBG) $(TEST_ENV) && $(MAKE) /E clean VCX-inlined$(XDBG) $(TEST_ENV)
 	$(MAKE) /E realclean VCE-inlined$(XDBG)
-	cd tests && $(MAKE) /E clean VCE$(XDBG) $(TEST_ENV)
+	cd tests && $(MAKE) /E clean VCE-inlined$(XDBG) $(TEST_ENV)
 	$(MAKE) /E realclean VSE-inlined$(XDBG)
-	cd tests && $(MAKE) /E clean VSE$(XDBG) $(TEST_ENV)
+	cd tests && $(MAKE) /E clean VSE-inlined$(XDBG) $(TEST_ENV)
 !IF DEFINED(EXHAUSTIVE)
 	$(MAKE) /E realclean VC$(XDBG)
 	cd tests && $(MAKE) /E clean VC$(XDBG) $(TEST_ENV) && $(MAKE) /E clean VCX$(XDBG) $(TEST_ENV)
