@@ -1,3 +1,10 @@
+2012-09-23  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* Makefile: Add secondary target names to existing test targets so
+	we can output how the library was built, e.g. "Running VC-inlined test".
+	This is useful when making "all-tests" from the library build Makefile.
+	* GNUmakefile: Similarly.
+
 2012-09-22  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* GNUmakefile: Do what Makefile does and print the make target
