@@ -1,3 +1,9 @@
+2012-09-23  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* GNUmakefile: Modify "all-tests" to use new targets in tests
+	GNUmakefile.
+	* Makefile: Similarly.
+
 2012-09-22  Daniel Richard. G <danielg at teragram dot com>
 
 	* GNUmakefile: Reordered the command lines in the "help" target
